# smbus-pec-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
benches/: benchmarks.rs
examples/: example.rs
src/: lib.rs
tests/: integration.rs
