[package]
name = "smbus-pec"
version = "0.1.0" # remember to update html_root_url
authors = ["Diego Barrios Romero <eldruin@gmail.com>"]
repository = "https://github.com/eldruin/smbus-pec-rs"
license = "MIT OR Apache-2.0"
description = "Minimal portable implementation of SMBus Packet Error Code calculation algorithm."
readme = "README.md"
keywords = ["smbus", "pec", "checksum", "crc"]
categories = ["embedded", "algorithms", "hardware-support", "no-std"]
homepage = "https://github.com/eldruin/smbus-pec-rs"
documentation = "https://docs.rs/smbus-pec"
include = [
    "/**/*.rs",
    "/Cargo.toml",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]
edition = "2018"

[features]
lookup-table = []

[build-dependencies]
embedded-crc-macros = "0.1"

[dependencies]
embedded-crc-macros = "0.1"

[dev-dependencies]
criterion = "0.3"
rand = "0.6" # 0.7 is not compatible with Rust 1.31.0

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = true # for perf

[profile.release]
lto = true